<resources>
    <string name="app_name">Login Template</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_send">Send</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_signin_message">Hello, sign in to your account</string>
    <string name="text_signin_social_media">Or Sign in using Gmail</string>
    <string name="text_signup_social_media">Or Sign up using Gmail</string>
    <string name="text_signin_signup">Don\'t have an account? <b>Sign up</b></string>
    <string name="text_signup_terms">By signing up, you agree to our <b>terms and conditions</b></string>
    <string name="text_signup_message">Hello, let\'s set up your account</string>

    <string name="text_forgot_password_title">Forgot password? No worries</string>
    <string name="text_forgot_password_message">We will send you a link to reset your password</string>

    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="thinkr_logo">Thinkr Logo</string>
    <string name="tagline">Let\'s start thinkin… \nSelect a subject</string>
    <string name="chat_hint">Type a message</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="_settings">More settings features coming out soon! </string>
    <string name="edit_profile">Edit Profile</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="timer">Timer</string>
    <string name="start_timer">Start Timer</string>
    <string name="thinkr_session">Thinkr Session</string>
</resources>
